# origin

Cmake/1/1/: 1.cpp  1.h  CMakeLists.txt
Cmake/2/2/: 2.cpp  2.h  CMakeLists.txt  Equilateral_triangle.cpp  Equilateral_triangle.h  Figure.cpp  Figure.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Right_triangle.cpp  Right_triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  readme.md
IDE. 1 lesson/IDE 1/: IDE 1.sln
IDE. 1 lesson/IDE 1/IDE 1/: IDE 1.cpp  IDE 1.vcxproj  IDE 1.vcxproj.filters  out.txt
abstraction_incapsul/1/abstraction_incapsul/: abstraction_incapsul.cpp  abstraction_incapsul.sln  abstraction_incapsul.vcxproj  abstraction_incapsul.vcxproj.filters  in.txt  out.txt
abstraction_incapsul/2/abstract_incapsul_2/: abstract_incapsul_2.cpp  abstract_incapsul_2.sln  abstract_incapsul_2.vcxproj  abstract_incapsul_2.vcxproj.filters  out.txt
classses/1/classes_1/: classes_1.cpp  classes_1.sln  classes_1.vcxproj  classes_1.vcxproj.filters
classses/2/scetchik/: scetchik.cpp  scetchik.sln  scetchik.vcxproj  scetchik.vcxproj.filters
исключения и обработка ошибок/2/: 2.cpp  Equilateral_triangle.cpp  Equilateral_triangle.h  Figure.cpp  Figure.h  Figure_exeption.cpp  Figure_exeption.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Right_triangle.cpp  Right_triangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
(+95 files in other folders)
